--- a/Languages/default-de.xml
+++ b/Languages/default-de.xml
@@ -3326,6 +3326,8 @@
 		<string id="17513" value="Kodierungsfehler"/>
 		<string id="17514" value="Aktualisiere Bittorrent-Downloads..."/>
 		<string id="17515" value="Konvertiere Torrent:"/>
+		<string id="17516" value="Datei oder Torrent herunterladen"/>
+		<string id="17517" value="Neue Suche"/>
 		<string id="18496" value="Sie haben das Namensfeld geändert. Sind Sie sicher, dass Sie diesen Download umbenennen wollen?"/>
 		<string id="18503" value="Sind Sie sicher, dass Sie den aktuellen Verifizierungsstatus vergessen wollen? Alle heruntergeladenen Daten werden als nicht verifiziert betrachtet und gepufferte Hashtrees und Hashsets werden gelöscht."/>
 		<string id="18504" value="Sind Sie sicher, dass Sie alle Quellen für den markierten Download vergessen wollen?"/>
@@ -3808,7 +3810,7 @@
 			<control caption="_Einstellungen..."/>
 			<control caption="Mehr..."/>
 		</dialog>
-		<dialog name="CAdvancedSettingsPage" cookie="SyEdmsBuBuStStEd" caption="Erweitert">
+		<dialog name="CAdvancedSettingsPage" cookie="SyEdmsBuBuStStEdBuCo" caption="Erweitert">
 			<control/>
 			<control/>
 			<control/>
@@ -3816,6 +3818,8 @@
 			<control caption="Einstellung"/>
 			<control caption="Wert:"/>
 			<control caption="Info:"/>
+			<control/>
+			<control/>
 			<control/>
 		</dialog>
 		<dialog name="CQueuePropertiesDlg" cookie="BuEdBuBuBuBuBuEdBuEdBuCoBuEdBuSyBuBuStEdmsStEdmsStEdmsBuStEdStEdmsBuEdmsBuBuBu" caption="Warteschlangeneigenschaften">
