--- a/Languages/default-es-mx.xml
+++ b/Languages/default-es-mx.xml
@@ -3325,6 +3325,8 @@
 		<string id="17513" value="Encoding error"/>
 		<string id="17514" value="Updating Bittorrent Downloads..."/>
 		<string id="17515" value="Converting Torrent:"/>
+		<string id="17516" value="Descargar Archivo O Torrent"/>
+		<string id="17517" value="Buscar..."/>
 		<string id="18496" value="Usted ha cambiado el nombre del archivo.  ¿Está seguro de cambiarlo?"/>
 		<string id="18503" value="¿Estás seguro de olvidar el estado actual de verificación? Toda la información de la descarga va a ser tratada como inseguro, para reverificarla."/>
 		<string id="18504" value="¿Estás seguro de olvidar todas las fuentes de esta descarga?"/>
@@ -3807,7 +3809,7 @@
 			<control caption="_Configurar..."/>
 			<control caption="Buscar más..."/>
 		</dialog>
-		<dialog name="CAdvancedSettingsPage" cookie="SyEdmsBuBuStStEd" caption="Avanzado">
+		<dialog name="CAdvancedSettingsPage" cookie="SyEdmsBuBuStStEdBuCo" caption="Avanzado">
 			<control/>
 			<control/>
 			<control/>
@@ -3815,6 +3817,8 @@
 			<control caption="Configuración:"/>
 			<control caption="Valor:"/>
 			<control caption="Descripción:"/>
+			<control/>
+			<control/>
 			<control/>
 		</dialog>
 		<dialog name="CQueuePropertiesDlg" cookie="BuEdBuBuBuBuBuEdBuEdBuCoBuEdBuSyBuBuStEdmsStEdmsStEdmsBuStEdStEdmsBuEdmsBuBuBu" caption="Propiedades de Cola de Subida">
