--- a/Languages/default-hr.xml
+++ b/Languages/default-hr.xml
@@ -3324,6 +3324,8 @@
 		<string id="17513" value="Encoding error"/>
 		<string id="17514" value="Updating Bittorrent Downloads..."/>
 		<string id="17515" value="Converting Torrent:"/>
+		<string id="17516" value="Skini Datoteku ili Torrent"/>
+		<string id="17517" value="Nova Potraga"/>
 		<string id="18496" value="Napravili ste promjenu u polju imena.Jeste li sigurni da želite preimenovati ovo skidanje?"/>
 		<string id="18503" value="Are you sure you want to forget the current verification status?All downloaded data will be treated as untrusted, and cached hashtrees and hashsets will be flushed."/>
 		<string id="18504" value="Jeste li sigurni da želite da zaboravim sve izvore odabrane datoteke?"/>
@@ -3806,7 +3808,7 @@
 			<control caption="_Naštimaj..."/>
 			<control caption="Stavi Više"/>
 		</dialog>
-		<dialog name="CAdvancedSettingsPage" cookie="SyEdmsBuBuStStEd" caption="Napredno">
+		<dialog name="CAdvancedSettingsPage" cookie="SyEdmsBuBuStStEdBuCo" caption="Napredno">
 			<control/>
 			<control/>
 			<control/>
@@ -3814,6 +3816,8 @@
 			<control caption="Postavke:"/>
 			<control caption="Vrijednost:"/>
 			<control caption="Opis:"/>
+			<control/>
+			<control/>
 			<control/>
 		</dialog>
 		<dialog name="CQueuePropertiesDlg" cookie="BuEdBuBuBuBuBuEdBuEdBuCoBuEdBuSyBuBuStEdmsStEdmsStEdmsBuStEdStEdmsBuEdmsBuBuBu" caption="Postavke davanja">
