Fixed crash due incorrectly translated text in Português.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9192 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-pt-br.po
+++ b/Languages/default-pt-br.po
@@ -7387,7 +7387,7 @@ msgstr "Falhou em carregar os schemas do metadata. Por favor reinstale o aplicat
 
 #: string;20248
 msgid "You selected %u files. Are you sure?"
-msgstr "Você selecionou %U arquivos. Você tem certeza?"
+msgstr "Você selecionou %u arquivos. Você tem certeza?"
 
 #: string;20249
 msgid "Off"
